add github code

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     </section>
     <footer class="global-footer">
       <a
-        href="https://www.youtube.com/channel/UC_s1FC7s5YVwDImzv-WG93Q"
+        href="https://github.com/JejuWisetProject/IntroduceWebPage"
         target="blank"
         >'오남매' 페이지 코드 바로가기</a
       >
