comment&impression modify

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>1분코딩 예제 - 코로나19 시대, 제주 사는 개발자의 하루</title>
+    <title>오남매 팀</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap"
       rel="stylesheet"
@@ -65,17 +65,27 @@
         </div>
         <div class="step">
           <p>
-            안녕하세요 팀에서 막내를 맡고 있고 팀장 임혜원입니다. 프론트엔드
-            개발자 직군을 희망하고 있는 졸업예정자입니다. 요즘에는 인터렉티브
-            코딩에 관심이 생겨 관련된 강의도 듣고 있습니다. 많이 부족하지만
-            열심히 공부하는 중입니다:)
+            안녕하세요~!! 팀에서 '젊음'을 맡고 있는 막내 임혜원입니다. 4학년
+            화석이긴 하지만 여기선 제일 어린 사람입니다^^ 걱정이 많고 눈물도
+            많아서 개복치적인 성향이 있지만 프론트개발자를 꿈꾸고 있고 항상
+            열심히 공부하는 중입니다:) 졸라맨 같은 이 그림은,,제가 그렸는데요.
+            그림전공은 아니라서,,양해부탁드립니다ㅋㅋ,,
           </p>
         </div>
         <div class="step">
-          <p>안녕하세요 여대생활동단을 하자고 팀을 만든 유은지입니다.</p>
+          <p>
+            아아 안녕하세요 혹시 제 차례인가요?ㅎㅎㅎㅎ저는 먼저 팀을 만들자고
+            한 유은지입니다~~~!!! 컴퓨터공학전공 이제 막 졸업을 보고 있는 4학년
+            할머니입니다. 저도 팀장처럼 프론트앤드에 관심이 많은 학생입니다.
+            열심히 프론트 앤드길만 파서 장인이 되려고 합니다^^ 이쁘게
+            봐주세염~~~ 제가 여기서 제일 키가 큰데 권력으로 키가 작아졌네요 ㅎㅎ
+          </p>
         </div>
         <div class="step">
-          <p>안녕하세요 늦게 합류한 청일점 강혁준입니다.</p>
+          <p>
+            안녕하세요 늦게 합류한 청일점 카페인 중독자 강혁준입니다. 프론트엔드
+            직군에 흥미가 있어 리액트 공부를 열심히하고 있습니다 :>
+          </p>
         </div>
         <div class="step">
           <p>
@@ -101,6 +111,7 @@
         <div class="last">
           <p>
             여대생활동단을 통해 스스로 공부하고 프로젝트를 진행할 수 있었습니다.
+            관심분야를 더 공부해서 실력있는 개발자가 되는 것이 꿈입니다 :)
             감사합니다!
           </p>
         </div>
@@ -114,12 +125,29 @@
         꾸준히 할 수 있었습니다. 또한, 부족한 부분이 무엇이고 어떻게
         공부해야하는지에 대한 의견을 나눌 수 있어 뜻깊은 시간이었습니다.
         최종적으로 간단하지만 생동감있는 웹페이지를 결과물로 낼 수 있어
-        뿌듯합니다.
+        뿌듯합니다. 인터렉티브 코딩에 대한 관심도도 높아지면서 내가 무엇을
+        좋아하고 어떤 진로를 정하는 것이 좋을지 생각할 수 있는 중요한 시간도
+        가질 수 있었습니다. 앞으로 다양한 활동들을 하며 좋은 개발자가 되는 것이
+        목표입니다:)
       </p>
       <h2>유은지</h2>
-      <p>랄랄</p>
+      <p>
+        이번 여대생 활동단을 하면서 팀워크에 대해 많이 배웠습니다. 특히
+        활동단에서 제공해준 강의 중 팀끼리 진행하고 팀활동을 할 때 사용가능한
+        협업툴에 대한 소개를 통해 배운 틀을 통해 활동을 진행해서 도움을 많이
+        받았습니다. 예전부터 진행하고 싶었던 스터디를 여대생 활동단을 계기로
+        스터디를 진행하게 되어 좋은 기회였던 것 같습니다. 아쉬운 점이 있다면
+        시간이 되지 않아서 참여하지 못한 프로그램들입니다. 나중에 기회가 된다면
+        꼭 참여하고 싶습니다.
+      </p>
       <h2>강혁준</h2>
-      <p>랄랄</p>
+      <p>
+        저는 프론트엔드에 관심이 있어 대부분 독학에 많은 시간을 보냈었습니다.
+        이번 여대생활동단을 통해 처음으로 같은 흥미를 가진 학생들과 협업을
+        해보면서 서로의 부족한 부분을 보안해주고, 정보를 공유하면서 프로젝트를
+        진행하면서 함께의 중요성을 많이 느꼈습니다. 앞으로 더 많은 활동을 통해
+        경험을 쌓으면 좋을 것 같다는 생각을 했습니다.
+      </p>
     </section>
     <footer class="global-footer">
       <a
