--- a/index.html
+++ b/index.html
@@ -83,8 +83,10 @@
         </div>
         <div class="step">
           <p>
-            안녕하세요 늦게 합류한 청일점 카페인 중독자 강혁준입니다. 프론트엔드
-            직군에 흥미가 있어 리액트 공부를 열심히하고 있습니다 :>
+            안녕하세요 늦게 합류한 청일점이자 카페인 중독자 강혁준입니다. 커피에
+            관해 진지한 편이고요. 돈을 많이 벌어 비싼 커피머신을 사는 것이
+            꿈입니다. 프론트엔드 직군에 흥미가 있어 리액트 공부를 열심히하고
+            있습니다 :>
           </p>
         </div>
         <div class="step">
