내용 주석 달기

--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>오남매 팀</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -16,15 +13,10 @@
         <h1 class="page-title">여대생 활동단 '오남매'를 소개합니다.</h1>
         <p>
           이 페이지는
-          <a href="https://studiomeal.com/archives/1203" target="_blank"
-            >'1분코딩'의 인터렉티브 페이지</a
-          >
-          만들기를 참고해 만든 '오남매' 팀 소개 웹페이지입니다. 오남매, 3명으로
-          구성된 팀인데요, 2017년부터 5년째 보는 사람들이라서 그렇습니다. 저희는
-          사실 '오버워치'라는 게임을 통해서 친해진 케이스인데요. 지금은
-          아니지만(?) 예전에는 게임을 정말 많이 했거든요. 저희 3명의 단톡방
-          이름은 웬수들입니다. 사실 좀 지긋지긋하긴 하지만 ㅎㅎ 그래도 나름 같이
-          있으면 재밌네요.
+          <a href="https://studiomeal.com/archives/1203" target="_blank">'1분코딩'의 인터렉티브 페이지</a>
+          만들기를 참고해 만든 '오남매' 팀 소개 웹페이지입니다. 오남매, 3명으로 구성된 팀인데요, 2017년부터 5년째 보는 사람들이라서
+          그렇습니다. 저희는 사실 '오버워치'라는 게임을 통해서 친해진 케이스인데요. 지금은 아니지만(?) 예전에는 게임을 정말 많이 했거든요.
+          저희 3명의 단톡방 이름은 웬수들입니다. 사실 좀 지긋지긋하긴 하지만 ㅎㅎ 그래도 나름 같이 있으면 재밌네요.
         </p>
       </div>
     </header>
@@ -65,56 +57,46 @@
         </div>
         <div class="step">
           <p>
-            안녕하세요~!! 팀에서 '젊음'을 맡고 있는 막내 임혜원입니다. 4학년
-            화석이긴 하지만 여기선 제일 어린 사람입니다^^ 걱정이 많고 눈물도
-            많아서 개복치적인 성향이 있지만 프론트개발자를 꿈꾸고 있고 항상
-            열심히 공부하는 중입니다:) 졸라맨 같은 이 그림은,,제가 그렸는데요.
-            그림전공은 아니라서,,양해부탁드립니다ㅋㅋ,,
+            안녕하세요~!! 팀에서 '젊음'을 맡고 있는 막내 임혜원입니다. 4학년 화석이긴 하지만 여기선 제일 어린 사람입니다^^ 걱정이 많고
+            눈물도 많아서 개복치적인 성향이 있지만 프론트개발자를 꿈꾸고 있고 항상 열심히 공부하는 중입니다:) 졸라맨 같은 이 그림은,,제가
+            그렸는데요. 그림전공은 아니라서,,양해부탁드립니다ㅋㅋ,,
           </p>
         </div>
         <div class="step">
           <p>
-            아아 안녕하세요 혹시 제 차례인가요?ㅎㅎㅎㅎ저는 먼저 팀을 만들자고
-            한 유은지입니다~~~!!! 컴퓨터공학전공 이제 막 졸업을 보고 있는 4학년
-            할머니입니다. 저도 팀장처럼 프론트앤드에 관심이 많은 학생입니다.
-            열심히 프론트 앤드길만 파서 장인이 되려고 합니다^^ 이쁘게
+            아아 안녕하세요 혹시 제 차례인가요?ㅎㅎㅎㅎ저는 먼저 팀을 만들자고 한 유은지입니다~~~!!! 컴퓨터공학전공 이제 막 졸업을 보고 있는
+            4학년 할머니입니다. 저도 팀장처럼 프론트앤드에 관심이 많은 학생입니다. 열심히 프론트 앤드길만 파서 장인이 되려고 합니다^^ 이쁘게
             봐주세염~~~ 제가 여기서 제일 키가 큰데 권력으로 키가 작아졌네요 ㅎㅎ
           </p>
         </div>
         <div class="step">
           <p>
-            안녕하세요 늦게 합류한 청일점이자 카페인 중독자 강혁준입니다. 커피에
-            관해 진지한 편이고요. 돈을 많이 벌어 비싼 커피머신을 사는 것이
-            꿈입니다. 프론트엔드 직군에 흥미가 있어 리액트 공부를 열심히하고
-            있습니다 :>
+            안녕하세요 늦게 합류한 청일점이자 카페인 중독자 강혁준입니다. 커피에 관해 진지한 편이고요. 돈을 많이 벌어 비싼 커피머신을 사는
+            것이 꿈입니다. 프론트엔드 직군에 흥미가 있어 리액트 공부를 열심히하고 있습니다 :>
           </p>
         </div>
         <div class="step">
           <p>
-            4학년인 임혜원과 유은지는 여대생활동단 지원비를 통해 '정보처리기사'
-            자격증 필기 시험을 보고 합격했습니다! 실기는 최근에 봤는데요,,
-            합격여부는 아직 모르겠네요,, 하지만 열심히 했습니다ㅠㅠ 붙었으면
-            좋겠네요 ㅎㅎ
+            4학년인 임혜원과 유은지는 여대생활동단 지원비를 통해 '정보처리기사' 자격증 필기 시험을 보고 합격했습니다! 실기는 최근에
+            봤는데요,, 합격여부는 아직 모르겠네요,, 하지만 열심히 했습니다ㅠㅠ 붙었으면 좋겠네요 ㅎㅎ
           </p>
         </div>
         <div class="step">
           <p>
-            HTML, CSS, JS 등 스터디도 진행했습니다. 특히, 인프런이라는 사이트를
-            이용해서 강의를 듣고 진행도를 공유하는 등 활동을 진행했습니다.
+            HTML, CSS, JS 등 스터디도 진행했습니다. 특히, 인프런이라는 사이트를 이용해서 강의를 듣고 진행도를 공유하는 등 활동을
+            진행했습니다.
           </p>
         </div>
         <div class="step">
           <p>
-            또한, 일찍이 취업한 동기(17학번)의 도움으로 멘토링도 진행했습니다.
-            진로계획 및 취업정보에 대한 꿀팁에 대한 이야기를 나누며 많은 도움을
-            얻었습니다.
+            또한, 일찍이 취업한 동기(17학번)의 도움으로 멘토링도 진행했습니다. 진로계획 및 취업정보에 대한 꿀팁에 대한 이야기를 나누며 많은
+            도움을 얻었습니다.
           </p>
         </div>
         <div class="last">
           <p>
-            여대생활동단을 통해 스스로 공부하고 프로젝트를 진행할 수 있었습니다.
-            관심분야를 더 공부해서 실력있는 개발자가 되는 것이 꿈입니다 :)
-            감사합니다!
+            여대생활동단을 통해 스스로 공부하고 프로젝트를 진행할 수 있었습니다. 관심분야를 더 공부해서 실력있는 개발자가 되는 것이 꿈입니다
+            :) 감사합니다!
           </p>
         </div>
       </div>
@@ -123,40 +105,27 @@
       <h1>3인의 활동 마무리 소감</h1>
       <h2>임혜원</h2>
       <p>
-        여대생활동단을 통해 혼자라면 하지 않았을 공부를 스터디라는 모임을 통해
-        꾸준히 할 수 있었습니다. 또한, 부족한 부분이 무엇이고 어떻게
-        공부해야하는지에 대한 의견을 나눌 수 있어 뜻깊은 시간이었습니다.
-        최종적으로 간단하지만 생동감있는 웹페이지를 결과물로 낼 수 있어
-        뿌듯합니다. 인터렉티브 코딩에 대한 관심도도 높아지면서 내가 무엇을
-        좋아하고 어떤 진로를 정하는 것이 좋을지 생각할 수 있는 중요한 시간도
-        가질 수 있었습니다. 앞으로 다양한 활동들을 하며 좋은 개발자가 되는 것이
-        목표입니다:)
+        여대생활동단을 통해 혼자라면 하지 않았을 공부를 스터디라는 모임을 통해 꾸준히 할 수 있었습니다. 또한, 부족한 부분이 무엇이고 어떻게
+        공부해야하는지에 대한 의견을 나눌 수 있어 뜻깊은 시간이었습니다. 최종적으로 간단하지만 생동감있는 웹페이지를 결과물로 낼 수 있어
+        뿌듯합니다. 인터렉티브 코딩에 대한 관심도도 높아지면서 내가 무엇을 좋아하고 어떤 진로를 정하는 것이 좋을지 생각할 수 있는 중요한
+        시간도 가질 수 있었습니다. 앞으로 다양한 활동들을 하며 좋은 개발자가 되는 것이 목표입니다:)
       </p>
       <h2>유은지</h2>
       <p>
-        이번 여대생 활동단을 하면서 팀워크에 대해 많이 배웠습니다. 특히
-        활동단에서 제공해준 강의 중 팀끼리 진행하고 팀활동을 할 때 사용가능한
-        협업툴에 대한 소개를 통해 배운 틀을 통해 활동을 진행해서 도움을 많이
-        받았습니다. 예전부터 진행하고 싶었던 스터디를 여대생 활동단을 계기로
-        스터디를 진행하게 되어 좋은 기회였던 것 같습니다. 아쉬운 점이 있다면
-        시간이 되지 않아서 참여하지 못한 프로그램들입니다. 나중에 기회가 된다면
-        꼭 참여하고 싶습니다.
+        이번 여대생 활동단을 하면서 팀워크에 대해 많이 배웠습니다. 특히 활동단에서 제공해준 강의 중 팀끼리 진행하고 팀활동을 할 때
+        사용가능한 협업툴에 대한 소개를 통해 배운 틀을 통해 활동을 진행해서 도움을 많이 받았습니다. 예전부터 진행하고 싶었던 스터디를 여대생
+        활동단을 계기로 스터디를 진행하게 되어 좋은 기회였던 것 같습니다. 아쉬운 점이 있다면 시간이 되지 않아서 참여하지 못한
+        프로그램들입니다. 나중에 기회가 된다면 꼭 참여하고 싶습니다.
       </p>
       <h2>강혁준</h2>
       <p>
-        저는 프론트엔드에 관심이 있어 대부분 독학에 많은 시간을 보냈었습니다.
-        이번 여대생활동단을 통해 처음으로 같은 흥미를 가진 학생들과 협업을
-        해보면서 서로의 부족한 부분을 보안해주고, 정보를 공유하면서 프로젝트를
-        진행하면서 함께의 중요성을 많이 느꼈습니다. 앞으로 더 많은 활동을 통해
-        경험을 쌓으면 좋을 것 같다는 생각을 했습니다.
+        저는 프론트엔드에 관심이 있어 대부분 독학에 많은 시간을 보냈었습니다. 이번 여대생활동단을 통해 처음으로 같은 흥미를 가진 학생들과
+        협업을 해보면서 서로의 부족한 부분을 보안해주고, 정보를 공유하면서 프로젝트를 진행하면서 함께의 중요성을 많이 느꼈습니다. 앞으로 더
+        많은 활동을 통해 경험을 쌓으면 좋을 것 같다는 생각을 했습니다.
       </p>
     </section>
     <footer class="global-footer">
-      <a
-        href="https://github.com/JejuWisetProject/IntroduceWebPage"
-        target="blank"
-        >'오남매' 페이지 코드 바로가기</a
-      >
+      <a href="https://github.com/JejuWisetProject/IntroduceWebPage" target="blank">'오남매' 페이지 코드 바로가기</a>
     </footer>
 
     <script src="main.js"></script>
